- ** BlockHeader.NextBlkDiff is now PoS addresses paid.
- ** Blockheader.reward is now PoW payment.
- Command "sumary" improved.
- All pool relative commands deprecated.
- Updated mainmenu.
- Removed Form pool.
- Protocol "$NEWBL" deprecated.
- Improved function "ShowBlchHead".
- Improved network synchronization.
- Fixed "MINE" ammount on user transaction history.

Up to Version 0.3.0Aa4

- Protocol 2 mining system implemented.

Version 0.2.1Lb3

- New minning system.

Version 0.2.1Lb2

- Fixing pool payment system.
- Do not add to crypto array transactions already pending.
- Command "addnode" deprecated.
- Command "delnode" deprecated.
- Protocol "$NODES" deprecated.
- Implemented ThSa GetPendingCount.
- Implemented ThSa ClearAllPending.
- Undone server info catch system.
- Improved client close procedure.
- Added Russian language.
- New certificate method.

Version 0.2.1Lb1

- Official release.

Version 0.2.1La9

- URGENT anti injection system implemented.
- Closing app protocol improved.

Version 0.2.1La8

- Official release

Version 0.2.1La7

- Perfect close. Removed close timer.
- mpmn unit created.
- Full autodownload from repo windows/linux.

Version 0.2.1La6

- Node verify first if a report already exists to better performance.
- MNs hash added to ping/pong report.
- MNs hash added to slots list.
- MNs count added to ping/pong report.
- MNs count added to slot list.
- NetworkMNsHash consensus calculated.
- NetworkMNsCount consensus calculated.
- Fixed Pending request only when CriptoThreadRunning is false.
- Slots grid updated each second instead each cycle.
- Increased node max peers to 60.
- Masternodes data includedd in NodeStatus.
- Implemented double tracking system to pool pays.
- Masternodes info show on data panel.
- Masternodes download at connect.
- Implemented update from repo.
- Pool miner stats updates each second.
- History command improved.
- Added verificators to add and remove crypto operations to/from cryptothread.